introduced tailwind css

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.heading{
+/* .heading{
     background-color: antiquewhite;
     margin-left: 10%;
     margin-right: 10%;
@@ -20,4 +20,4 @@
     display: flex;
     border-color: yellow;
     border-style: solid;
-}
+} */
